@@ -26,6 +26,7 @@ Revision history for Perl extension PPI
 	- Make PPI::Token::Attribute->parameters return undef not empty
 	  string when attribute has no parameters (GitHub #116) (MOREGAN)
 	- Unit tests for PPI::Token::Attribute (GitHub #115) (MOREGAN)
+	- Unit tests for PPI::Token::Symbol (GitHub #148) (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
